--- a/proyectoFinal/template/productos/update_products.html
+++ b/proyectoFinal/template/productos/update_products.html
@@ -67,7 +67,7 @@ form{
 {% endblock %}
 {% block contenido_que_cambia %}
 <main>
-<form action="" method="POST">
+<form action="" method="POST" enctype="multipart/form-data">
 {% csrf_token %}
 
 
