--- a/proyectoFinal/template/inicio.html
+++ b/proyectoFinal/template/inicio.html
@@ -4,6 +4,7 @@
 {% block estilo %}
 <style>
     .display-3 {
+        font-size: 4vw;
         color: wheat;
     }
 </style>
@@ -14,7 +15,7 @@
     <img src="media/vinos.jpg" style="height: 93vh; width: 100vw; object-fit: cover;" >
     <div class="carousel-caption " style="margin-bottom: 100px; ">
         <div class="container" style="height: 40vh; width: 40vw; background-color: rgba(30, 30, 30, 0.95); display: flex; flex-direction: column; align-items: center; justify-content: center; border-radius: 25px;">
-            <h1 class="display-3 text-center">
+            <div class="display-3 text-center">
                 <p> Bienvenido
 
                     {% if request.user.is_authenticated %}
@@ -24,7 +25,7 @@
                     {% endif %}
                 </p>
                 <p> a Espacio Bonhomia</p>
-            </h1>
+            </div>
             <p class="text-center" style="color: wheat;">Presione para ver productos</p>
             <p class=" text-center"">
                                     <a class=" btn btn-light btn-lg" href="/productos/list-product/" role="button">
