--- a/proyectoFinal/template/productos/list_otros.html
+++ b/proyectoFinal/template/productos/list_otros.html
@@ -37,7 +37,7 @@ Otros productos
                 </div>
                 {% elif request.user.is_authenticated %}
                 <div class="d-flex justify-content-center">
-                    <a href="/productos/delete-producto/{{articulos.id}}"
+                    <a href="{% url 'Add' articulos.id 'otos'%}"
                         class="btn btn-success my-2 my-sm-0">Comprar</a>
                 </div>
                 {% else %}
