--- a/proyectoFinal/template/productos/list_whisky.html
+++ b/proyectoFinal/template/productos/list_whisky.html
@@ -36,7 +36,7 @@ Whisky
                 </div>
                 {% elif request.user.is_authenticated %}
                 <div class="d-flex justify-content-center">
-                    <a href="/productos/delete-producto/{{articulos.id}}"
+                    <a href="{% url 'Add' articulos.id 'whisky'%}"
                         class="btn btn-success my-2 my-sm-0">Comprar</a>
                 </div>
                 {% else %}
